--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "Practica1-Bluuweb",
   "version": "1.0.0",
   "description": "",
-  "main": "Frutas.js",
+  "main": "app.js",
   "scripts": {
     "start": "node app",
     "dev": "nodemon app"
   },
   "keywords": [],
-  "author": "",
+  "author": "JavierPM95",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
